// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcOptionCard renders properly with the required title prop 1`] = `
<button
  class="ec-option-card"
  data-test="ec-option-card"
  type="button"
>
  <div
    class="ec-option-card-item"
  >
    <span
      data-test="ec-option-card-item__title-img"
    >
      <!--v-if-->
      <p
        class="ec-option-card-item__title"
      >
        Test Option Card
      </p>
    </span>
    <!--v-if-->
  </div>
</button>
`;

exports[`EcOptionCard renders the Option Card disabled if the isDisabled prop is set to true 1`] = `
<button
  class="ec-option-card ec-option-card--disabled"
  data-test="ec-option-card"
  disabled=""
  type="button"
>
  <div
    class="ec-option-card-item"
  >
    <span
      data-test="ec-option-card-item__title-img"
    >
      <svg
        alt="Test option card with Icon and caption"
        class="ec-icon ec-option-card-item__icon ec-option-card-item__icon--disabled"
        data-test="ec-option-card-item__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-eye"
        />
      </svg>
      <p
        class="ec-option-card-item__title"
      >
        Test option card with Icon and caption
      </p>
    </span>
    <p
      class="ec-option-card-item__caption ec-option-card-item__caption--disabled"
      data-test="ec-option-card-item__caption"
    >
      Test Caption
    </p>
  </div>
</button>
`;

exports[`EcOptionCard should render the Option card with the classes related to the type "accent" when type prop is set 1`] = `
<button
  class="ec-option-card ec-option-card--accent"
  data-test="ec-option-card"
  type="button"
>
  <div
    class="ec-option-card-item"
  >
    <span
      data-test="ec-option-card-item__title-img"
    >
      <svg
        alt="Test title"
        class="ec-icon ec-option-card-item__icon ec-option-card-item__icon--accent"
        data-test="ec-option-card-item__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-info"
        />
      </svg>
      <p
        class="ec-option-card-item__title"
      >
        Test title
      </p>
    </span>
    <p
      class="ec-option-card-item__caption ec-option-card-item__caption--accent"
      data-test="ec-option-card-item__caption"
    >
      Test Caption
    </p>
  </div>
</button>
`;

exports[`EcOptionCard should render the Option card with the classes related to the type "danger" when type prop is set 1`] = `
<button
  class="ec-option-card ec-option-card--danger"
  data-test="ec-option-card"
  type="button"
>
  <div
    class="ec-option-card-item"
  >
    <span
      data-test="ec-option-card-item__title-img"
    >
      <svg
        alt="Test title"
        class="ec-icon ec-option-card-item__icon ec-option-card-item__icon--danger"
        data-test="ec-option-card-item__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-info"
        />
      </svg>
      <p
        class="ec-option-card-item__title"
      >
        Test title
      </p>
    </span>
    <p
      class="ec-option-card-item__caption ec-option-card-item__caption--danger"
      data-test="ec-option-card-item__caption"
    >
      Test Caption
    </p>
  </div>
</button>
`;
